--- a/GreenRecipe_Backend/nginx/nginx.conf
+++ b/GreenRecipe_Backend/nginx/nginx.conf
@@ -13,7 +13,12 @@ http {
 
         #listen to port 80
         listen 80;
+        #listen 443 ssl;
+        #ssl_certificate /etc/ssl/nginxssl/nginx.cert;
+        #ssl_certificate_key /etc/ssl/nginxssl/nginx.key;
         access_log off;
+
+	
         #/ means all of the requests have to be forwarded to the api service
         location / {
         #resolves the IP using Docker internal DNS
