download compressed images

--- a/GreenRecipe_Backend/nginx/nginx.conf
+++ b/GreenRecipe_Backend/nginx/nginx.conf
@@ -12,10 +12,10 @@ http {
     server {
 
         #listen to port 80
-        listen 80;
-        #listen 443 ssl;
-        #ssl_certificate /etc/ssl/nginxssl/nginx.cert;
-        #ssl_certificate_key /etc/ssl/nginxssl/nginx.key;
+        #listen 80;
+        listen 443 ssl;
+        ssl_certificate /etc/ssl/nginxssl/nginx.cert;
+        ssl_certificate_key /etc/ssl/nginxssl/nginx.key;
         access_log off;
 
 	
